# sw_renderer

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.h  model.h  rasterizer.h  viewer.h
source/: main.cpp  model.cpp  rasterizer.cpp  viewer.cpp
